infra/modules/ec2/main.tf
# Obter última AMI do Ubuntu 22.04
data "aws_ami" "ubuntu" {
  most_recent = true
  owners      = ["099720109477"] # Canonical

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }
}

# Security Group liberando SSH e HTTP
resource "aws_security_group" "ec2_sg" {
  name        = "${var.instance_name}-sg"
  description = "Security Group para EC2"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# Buscar VPC default
data "aws_vpc" "default" {
  default = true
}

# Buscar subnets default
data "aws_subnets" "default" {
  filter {
    name   = "vpc-id"
    values = [data.aws_vpc.default.id]
  }
}

# Criar EC2

resource "aws_instance" "ec2" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = var.instance_type
  key_name                    = var.key_name
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  subnet_id                   = element(data.aws_subnets.default.ids, 0)
  associate_public_ip_address = true

  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              apt-get install -y nodejs npm

              mkdir -p /home/ubuntu/app
              cat << 'EON' > /home/ubuntu/app/server.js
              const http = require('http');
              const port = 80;
              const server = http.createServer((req, res) => {
                res.writeHead(200, {'Content-Type': 'text/plain'});
                res.end('Pós em Cloud');
              });
              server.listen(port, () => {
                console.log("Servidor rodando na porta " + port);
              });
              EON

              cd /home/ubuntu/app
              nohup node server.js > server.log 2>&1 &
              EOF

  tags = {
    Name = var.instance_name
  }
}

#resource "aws_instance" "ec2" {
#  ami                         = data.aws_ami.ubuntu.id
#  instance_type               = var.instance_type
#  key_name                    = var.key_name
#  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
#  subnet_id                   = element(data.aws_subnets.default.ids, 0)
#  associate_public_ip_address = true

#  tags = {
#    Name = var.instance_name
#  }
#}
